# 9781098135720

./: pyproject.toml
.github/workflows/: ruff.yml
ch01-working-with-vectors-matrices-and-arrays-in-numpy/: create_a_matrix.py  create_a_sparse_matrix.py  create_a_vector.py
